--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 </head>
 <body>
-    <h1>4 HULLO</h1>
+    <div class="container-fluid">
+        <h1>4 HULLO</h1>
+    </div>
+    
 
 </body>
 
