--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand"><img src="~/images/logo.png"> </a>
+        <a class="navbar-brand"><img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"></a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
