--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Works
@@ -31,11 +28,25 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-            >
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
           </ul>
         </div>
       </nav>
     <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h1>.allieKnepp {</h1>
+            </div>
+        </div>
+
+
+
+
 
     </div>
     
