--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col-4"></div>
+            <div class="col-6">
                 <h1>.allieKnepp {</h1>
             </div>
         </div>
