--- a/index.html
+++ b/index.html
@@ -39,12 +39,23 @@
       </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4"></div>
+            <div class="col-3"></div>
             <div class="col-6">
                 <h1>.allieKnepp {</h1>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-6">
+                <h1>Web: Development, Design;</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <h1>}</h1>
+            </div>
+        </div>
 
 
 
