--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Allie Knepp</title>
+    <base target="_self">
+    <meta name="description" content="A Bootstrap 4 carousel that advances one at a time. This example shows 3 slides at one, and moves one slide at a time." />
+    <meta name="google" value="notranslate">
+    <link rel="shortcut icon" href="/images/cp_ico.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script>
+$('.carousel').carousel()
+
+</script>
 
 </head>
 <body>
@@ -37,30 +50,56 @@
           </ul>
         </div>
       </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-3"></div>
+    <div class="container-fluid bg-secondary p-5"> <!--add a custom color -->
+        <div class="row mt-5 pt-5">
+            <div class="col-1"></div>
             <div class="col-6">
-                <h1>.allieKnepp {</h1>
+                <h1 class="text-white">.allieKnepp {</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4"></div>
+        <div class="row mt-3">
+            <div class="col-2"></div>
             <div class="col-6">
-                <h1>Web: Development, Design;</h1>
+                <h2 class="text-white">Web: Development, Design;</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-3"></div>
+        <div class="row pb-5 mb-lg-5">
+            <div class="col-1"></div>
             <div class="col-6">
-                <h1>}</h1>
+                <h1 class="text-white">}</h1>
             </div>
         </div>
-
-
-
-
     </div>
+    <div class="container-fluid">
+        <div class="row mt-5">
+            <div class="col-1"></div>
+            <div class="col-6">
+                <h2>My Work</h2>
+            </div>
+        
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\bigtreessite.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\trainsite.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\oldportfolio.JPG" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+    </div> 
     
 
 </body>
