--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ $('.carousel').carousel()
                 <h2>My Work</h2>
             </div>
         </div>
+        <div class="row pt-3">
+            <div class="col-1"></div>
+            <h3><strong>Web Pages</strong></h3>
+        </div>
+
         <div class="row">
             <div class="col-1"></div>
         
@@ -97,7 +102,43 @@ $('.carousel').carousel()
             </div>
         </div>
 
-    
+        <div class="row">
+            <div class="col-1"></div>
+            <h3><strong>Graphic Design</strong></h3>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="card p-3 m-3 shadow col-3">
+                <img src="images/bigtreessite.JPG" style="height: 75%;">
+                <h3><strong>Internship - CEM</strong></h3>
+
+            </div>
+            <div class="card p-3 m-3 shadow col-3">
+                <img src="images/bigtreessite.JPG" style="height: 75%;">
+                <h3><strong>Internship - CEM</strong></h3>
+
+            </div>
+            <div class="card p-3 m-3 shadow col-3">
+                <img src="images/bigtreessite.JPG" style="height: 75%;">
+                <h3><strong>Internship - CEM</strong></h3>
+
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-1"></div>
+            <div class="col-6">
+                <h2>About</h2>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-1"></div>
+            <div class="col-6">
+                <h2>Contact</h2>
+            </div>
+        </div>
 
 </body>
 
