--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\Header.png" />
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
         <a class="navbar-brand"><img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" >
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#work" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Works
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -61,21 +61,21 @@
 
     <div class="container-fluid m-0 bg">
         <div class="row mt-5 pt-5">
-            <div class="col-1"></div>
+            <div class="col-3"></div>
             <div class="col-6">
-                <h1 class="text-white">.allieKnepp {</h1>
+                <h1 class="text-white" style="transform: scale(1.5)">.allieKnepp {</h1>
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row m-5">
             <div class="col-2"></div>
             <div class="col-6">
-                <h2 class="text-white">Web: Development, Design;</h2>
+                <h2 class="text-white" style="transform: scale(1.1)">Web: Development, Design;</h2>
             </div>
         </div>
         <div class="row pb-5 mb-lg-5">
-            <div class="col-1"></div>
+            <div class="col-3"></div>
             <div class="col-6">
-                <h1 class="text-white">}</h1>
+                <h1 class="text-white" style="transform: scale(1.5)">}</h1>
             </div>
         </div>
     </div>
