changes and styel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <base target="_self"><!--targets everything to this page? doestn opwn links in  new tab-->
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" href="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"> <!-- favicon-->
-    <link rel="stylesheet" type="text/css" href="C:\Users\Allie\Documents\GitHub\aknepp.github.io\styles\bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="styles\style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
@@ -24,22 +24,23 @@
 
 </head>
 <body>
-    <div class="container-fluid mb-lg-5" style="position: absolute; left: 0; transform: rotate(-180deg); height: 80%">
+    <div class="container-fluid mb-lg-5" id="home" style="position: absolute; left: 0; transform: rotate(-180deg); height: 90%">
         <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\Header.png" />
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
         <a class="navbar-brand"><img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#work" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Works
@@ -49,6 +50,7 @@
                         <a class="dropdown-item" href="#graphicDesign">Graphic Design</a>
                     </div>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
                 </li>
@@ -58,35 +60,36 @@
             </ul>
         </div>
     </nav>
-
-    <div class="container-fluid m-0 bg">
-        <div class="row mt-5 pt-5">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <h1 class="text-white" style="transform: scale(1.5)">.allieKnepp {</h1>
+    <div class="m-5 p-5">
+        <div class="container-fluid m-0 bg">
+            <div class="row mt-5 pt-5">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <h1 class="text-white" style="transform: scale(1.5)">.allieKnepp {</h1>
+                </div>
             </div>
-        </div>
-        <div class="row m-5">
-            <div class="col-2"></div>
-            <div class="col-6">
-                <h2 class="text-white" style="transform: scale(1.1)">Web: Development, Design;</h2>
+            <div class="row m-5">
+                <div class="col-2"></div>
+                <div class="col-6">
+                    <h2 class="text-white" style="transform: scale(1.1)">Web: Development, Design;</h2>
+                </div>
             </div>
-        </div>
-        <div class="row pb-5 mb-lg-5">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <h1 class="text-white" style="transform: scale(1.5)">}</h1>
+            <div class="row pb-5 mb-lg-5">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <h1 class="text-white" style="transform: scale(1.5)">}</h1>
+                </div>
             </div>
         </div>
     </div>
     <!--this is the about section-->
 
-    <div class="mb-lg-5 p-5"></div>
+    <div class="mb-lg-5 p-5" id="about"></div>
     <div class="m-3">
         <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
     </div>
 
-    <div class="row mt-5" id="about">
+    <div class="row mt-5">
         <div class="col-1 mt-5"></div>
         <div class="col-6 mt-5">
             <h2>About</h2>
@@ -133,65 +136,66 @@
     </div>
 
     <div class="row">
-        <div class="col-1"></div>
+                <div class="col-1"></div>
 
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 75%;">
-            <h3><strong>Internship - CEM</strong></h3>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 75%;">
+                    <h3><strong>Internship - CEM</strong></h3>
+                    <p class="font-italic text-muted">This is a website about Calaveras Big Trees State Park</p>
 
-        </div>
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 75%;">
-            <h3><strong>Internship - CEM</strong></h3>
+                </div>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 75%;">
+                    <h3><strong>Internship - CEM</strong></h3>
 
-        </div>
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 75%;">
-            <h3><strong>Internship - CEM</strong></h3>
+                </div>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 75%;">
+                    <h3><strong>Internship - CEM</strong></h3>
 
-        </div>
-    </div>
+                </div>
+            </div>
 
-    <div class="m-5">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\smallstroke.png" style="position: absolute; z-index: -1;" />
-    </div>
-    <div class="row" id="graphicDesign">
-        <div class="col-1"></div>
-        <h3><strong>Graphic Design</strong></h3>
-    </div>
+            <div class="m-5">
+                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\smallstroke.png" style="position: absolute; z-index: -1;" />
+            </div>
+            <div class="row" id="graphicDesign">
+                <div class="col-1"></div>
+                <h3><strong>Graphic Design</strong></h3>
+            </div>
 
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 50%;">
-            <h3><strong>Internship - CEM</strong></h3>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 50%;">
+                    <h3><strong>Internship - CEM</strong></h3>
 
-        </div>
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 50%;">
-            <h3><strong>Internship - CEM</strong></h3>
+                </div>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 50%;">
+                    <h3><strong>Internship - CEM</strong></h3>
 
-        </div>
-        <div class="card p-3 m-3 shadow col-3">
-            <img src="images/bigtreessite.JPG" style="height: 50%;">
-            <h3><strong>Internship - CEM</strong></h3>
+                </div>
+                <div class="card p-3 m-3 shadow col-3">
+                    <img src="images/bigtreessite.JPG" style="height: 50%;">
+                    <h3><strong>Internship - CEM</strong></h3>
 
-        </div>
-    </div>
+                </div>
+            </div>
 
 
-    <div class="ml-4">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
-    </div>
-    <div class="row mt-5" id="contact">
-        <div class="col-1"></div>
-        <div class="col-6">
-            <h2>Contact</h2>
-        </div>
-    </div>
-    <div>
+            <div class="ml-4">
+                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
+            </div>
+            <div class="row mt-5" id="contact">
+                <div class="col-1"></div>
+                <div class="col-6">
+                    <h2>Contact</h2>
+                </div>
+            </div>
+            <div>
 
-    </div>
+            </div>
 
 </body>
 
