things have changed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -24,9 +25,7 @@
 
 </head>
 <body>
-    <div class="container-fluid mb-lg-5" id="home" style="position: absolute; left: 0; transform: rotate(-180deg); height: 90%">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\Header.png" />
-    </div>
+    <div class="container-fluid mb-lg-5" id="home"></div>
 
     <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
         <a class="navbar-brand"><img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"></a>
@@ -60,24 +59,29 @@
             </ul>
         </div>
     </nav>
-    <div class="m-5 p-5">
-        <div class="container-fluid m-0 bg">
-            <div class="row mt-5 pt-5">
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <h1 class="text-white" style="transform: scale(1.5)">.allieKnepp {</h1>
+    <div class="row mt-5 pt-5">
+        <div class="col-5 mr-5" style="">
+            <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\seattle.JPG" />
+        </div>
+        <div class="col-6 mt-5">
+            <div class="container-fluid m-0 bg">
+                <div class="row mt-5 pt-5">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <h1 class="text" style="transform: scale(1.5)">.allieKnepp {</h1>
+                    </div>
                 </div>
-            </div>
-            <div class="row m-5">
-                <div class="col-2"></div>
-                <div class="col-6">
-                    <h2 class="text-white" style="transform: scale(1.1)">Web: Development, Design;</h2>
+                <div class="row m-5">
+                    <div class="col-3"></div>
+                    <div class="col-9">
+                        <h2 class="text" style="transform: scale(1.1)">Web: Development, Design;</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="row pb-5 mb-lg-5">
-                <div class="col-3"></div>
-                <div class="col-6">
-                    <h1 class="text-white" style="transform: scale(1.5)">}</h1>
+                <div class="row pb-5 mb-lg-5">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <h1 class="text" style="transform: scale(1.5)">}</h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,7 +89,7 @@
     <!--this is the about section-->
 
     <div class="mb-lg-5 p-5" id="about"></div>
-    <div class="m-3">
+    <div class="m-3 ">
         <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
     </div>
 
@@ -113,7 +117,7 @@
 
             </h4>
         </div>
-        <div class="col-5">
+        <div class="col-5 mb-lg-5">
             <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\headshot.jpg" style="width: 95%;" />
         </div>
     </div>
