--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="mb-lg-5 p-5" id="about"></div>
     <div class="m-3 ">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
+        <img src="images\paintstroke.png" style="position: absolute;" />
     </div>
 
     <div class="row mt-5">
