fixing the image links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Allie Knepp</title>
     <base target="_self"><!--targets everything to this page? doestn opwn links in  new tab-->
     <meta name="google" value="notranslate">
-    <link rel="shortcut icon" href="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"> <!-- favicon-->
+    <link rel="shortcut icon" href="images\logo.png"> <!-- favicon-->
     <link rel="stylesheet" type="text/css" href="styles\style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
     <div class="container-fluid mb-lg-5" id="home"></div>
 
     <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-        <a class="navbar-brand"><img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\logo.png"></a>
+        <a class="navbar-brand"><img src="images\logo.png"></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
     </nav>
     <div class="row mt-5 pt-5">
         <div class="col-5 mr-5" style="">
-            <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\seattle.JPG" />
+            <img src="images\seattle.JPG" />
         </div>
         <div class="col-6 mt-5">
             <div class="container-fluid m-0 bg">
@@ -118,12 +118,12 @@
             </h4>
         </div>
         <div class="col-5 mb-lg-5">
-            <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\headshot.jpg" style="width: 95%;" />
+            <img src="images\headshot.jpg" style="width: 95%;" />
         </div>
     </div>
 
     <div class="ml-3">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
+        <img src="images\paintstroke.png" style="position: absolute;" />
     </div>
     <div class="row mt-5" id="work">
         <div class="col-1"></div>
@@ -132,7 +132,7 @@
         </div>
     </div>
     <div class="m-5">
-        <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\smallstroke.png" style="position: absolute; z-index: -1;" />
+        <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
     </div>
     <div class="row mt-3" id="web">
         <div class="col-1"></div>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="m-5">
-                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\smallstroke.png" style="position: absolute; z-index: -1;" />
+                <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
             </div>
             <div class="row" id="graphicDesign">
                 <div class="col-1"></div>
@@ -189,7 +189,7 @@
 
 
             <div class="ml-4">
-                <img src="C:\Users\Allie\Documents\GitHub\aknepp.github.io\images\paintstroke.png" style="position: absolute;" />
+                <img src="images\paintstroke.png" style="position: absolute;" />
             </div>
             <div class="row mt-5" id="contact">
                 <div class="col-1"></div>
