--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
     <div class="row mt-5 pt-5">
         <div class="col-5 mr-5" style="">
-            <img src="images\seattle.JPG" />
+            <img src="images\seattle.JPG" style="width: auto" />
         </div>
         <div class="col-6 mt-5">
             <div class="container-fluid m-0 bg">
@@ -89,7 +89,7 @@
     <!--this is the about section-->
 
     <div class="mb-lg-5 p-5" id="about"></div>
-    <div class="m-3 ">
+    <div class="m-3">
         <img src="images\paintstroke.png" style="position: absolute;" />
     </div>
 
@@ -102,7 +102,7 @@
 
     <div class="row pb-5">
         <div class="col-1"></div>
-        <div class="col-5 mt-4">
+        <div class="col-lg-5 col-sm-9 mt-4">
             <h3>Hello, My name is Allie Knepp</h3>
             <h4 class="p-4">
                 I am a senior studying Web Programming & Design. I have a passion for creating fun and functional websites. I enjoy the creativity of front end development and the challenge of back end.
@@ -117,7 +117,7 @@
 
             </h4>
         </div>
-        <div class="col-5 mb-lg-5">
+        <div class="col-lg-5 col-sm-8 m-5">
             <img src="images\headshot.jpg" style="width: 95%;" />
         </div>
     </div>
@@ -140,25 +140,24 @@
     </div>
 
     <div class="row">
-                <div class="col-1"></div>
+        <div class="col-1"></div>
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/bigtreessite.JPG" style="height: 50%;">
+            <h3><strong>Internship - CEM</strong></h3>
 
-                <div class="card p-3 m-3 shadow col-3">
-                    <img src="images/bigtreessite.JPG" style="height: 75%;">
-                    <h3><strong>Internship - CEM</strong></h3>
-                    <p class="font-italic text-muted">This is a website about Calaveras Big Trees State Park</p>
+        </div>
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/bigtreessite.JPG" style="height: 50%;">
+            <h3><strong>Internship - CEM</strong></h3>
 
-                </div>
-                <div class="card p-3 m-3 shadow col-3">
-                    <img src="images/bigtreessite.JPG" style="height: 75%;">
-                    <h3><strong>Internship - CEM</strong></h3>
+        </div>
+        <div class="col-0 col-md-1"></div>
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
+            <h3><strong>Internship - CEM</strong></h3>
 
-                </div>
-                <div class="card p-3 m-3 shadow col-3">
-                    <img src="images/bigtreessite.JPG" style="height: 75%;">
-                    <h3><strong>Internship - CEM</strong></h3>
-
-                </div>
-            </div>
+        </div>
+    </div>
 
             <div class="m-5">
                 <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
@@ -170,18 +169,19 @@
 
             <div class="row">
                 <div class="col-1"></div>
-                <div class="card p-3 m-3 shadow col-3">
+                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
                     <img src="images/bigtreessite.JPG" style="height: 50%;">
                     <h3><strong>Internship - CEM</strong></h3>
 
                 </div>
-                <div class="card p-3 m-3 shadow col-3">
+                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
                     <img src="images/bigtreessite.JPG" style="height: 50%;">
                     <h3><strong>Internship - CEM</strong></h3>
 
                 </div>
-                <div class="card p-3 m-3 shadow col-3">
-                    <img src="images/bigtreessite.JPG" style="height: 50%;">
+                <div class="col-md-1"></div>
+                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+                    <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
                     <h3><strong>Internship - CEM</strong></h3>
 
                 </div>
@@ -189,7 +189,7 @@
 
 
             <div class="ml-4">
-                <img src="images\paintstroke.png" style="position: absolute;" />
+                <img src="images\paintstroke.png" style="position: absolute; width:auto" />
             </div>
             <div class="row mt-5" id="contact">
                 <div class="col-1"></div>
