--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </div>
     </nav>
     <div class="row mt-5 pt-5">
-        <div class="col-5 mr-5" style="">
-            <img src="images\seattle.JPG" style="width: auto" />
+        <div class="col-lg-5 mr-5" style="">
+            <img src="images\seattle.JPG" />
         </div>
-        <div class="col-6 mt-5">
+        <div class="col-lg-6 col-md-8 col-sm-10 mt-5">
             <div class="container-fluid m-0 bg">
                 <div class="row mt-5 pt-5">
                     <div class="col-3"></div>
@@ -198,7 +198,9 @@
                 </div>
             </div>
             <div>
+                <form>
 
+                </form>
             </div>
 
 </body>
