--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
 
     <script>
         $(document).ready(function () {
-            $('.dropdown-toggle').dropdown()
+            $('.dropdown-toggle').dropdown();
+
+            //$("a").on('click', function (event) {
+
+            //    if (this.hash !== "") {
+            //        event.preventDefault();
+            //        var hash = this.hash;
+            //        $('html, body').animate({
+            //            scrollTop: $(hash).offset().top
+            //        }, 900, function () {
+
+            //            window.location.hash = hash;
+            //        });
+            //    }
+            //});
         });
 
-        $('.carousel').carousel()
 
-      
         
     </script>
 
@@ -41,7 +53,7 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#work" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle " href="#work" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Works
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -151,7 +163,7 @@
             <h3><strong>Internship - CEM</strong></h3>
 
         </div>
-        <div class="col-0 col-md-1"></div>
+        <!--<div class="col-0 col-md-1"></div>-->
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
             <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
             <h3><strong>Internship - CEM</strong></h3>
@@ -179,7 +191,7 @@
                     <h3><strong>Internship - CEM</strong></h3>
 
                 </div>
-                <div class="col-md-1"></div>
+                <!--<div class="col-md-1"></div>-->
                 <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
                     <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
                     <h3><strong>Internship - CEM</strong></h3>
