--- a/index.html
+++ b/index.html
@@ -154,19 +154,41 @@
     <div class="row">
         <div class="col-1"></div>
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/bigtreessite.JPG" style="height: 50%;">
+            <img src="images/cover_internship.png" class="img-fluid mb-5">
             <h3><strong>Internship - CEM</strong></h3>
-
+            <p class="font-weight-light">
+                The Purdue University Construction Engineering Management department needed a new interface to 
+                manage student data regarding their internships that were completed through the program…
+            </p>
+            <p class="font-italic">
+                Javascript, HTML, C#, SQL, Bootstrap
+            </p>
         </div>
+
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/bigtreessite.JPG" style="height: 50%;">
-            <h3><strong>Internship - CEM</strong></h3>
-
+            <img src="images/cover_trees.png" class="img-fluid mb-5">
+            <h3><strong>Calaveras Big Trees</strong></h3>
+            <p class="font-weight-light">
+                To enhance and display newly developed CSS and Javascript styling capabilities, my group and I 
+                created a mobile friendly and interactive website displaying information about the Calaveras Big 
+                Trees State Park in Northern California...
+            </p>
+            <p class="font-italic">
+                Javascript, jQuery, HTML, CSS
+            </p>
         </div>
+
         <!--<div class="col-0 col-md-1"></div>-->
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
-            <h3><strong>Internship - CEM</strong></h3>
+            <img src="images/cover_train.png" class="img-fluid mb-5" />
+            <h3><strong>Purdue Reamer Club</strong></h3>
+            <p class="font-weight-light">
+                The Purdue Reamer Club is a student run organization that was in need of a new website that could 
+                allow users to view upcoming events...
+            </p>
+            <p class="font-italic">
+                HTML, CSS, Javascript
+            </p>
 
         </div>
     </div>
