--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/cover_trees.png" class="img-fluid mb-5">
+            <img src="images/cover_calaveras.png" class="img-fluid mb-5">
             <h3><strong>Calaveras Big Trees</strong></h3>
             <p class="font-weight-light">
                 To enhance and display newly developed CSS and Javascript styling capabilities, my group and I 
