more image updates

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="row">
         <div class="col-1"></div>
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/cover_internship.png" class="img-fluid mb-5">
+            <img src="images/cover_internship.png" class="img-fluid mb-3">
             <h3><strong>Internship - CEM</strong></h3>
             <p class="font-weight-light">
                 The Purdue University Construction Engineering Management department needed a new interface to 
@@ -166,7 +166,7 @@
         </div>
 
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/cover_calaveras.png" class="img-fluid mb-5">
+            <img src="images/cover_calaveras.png" class="img-fluid mb-3">
             <h3><strong>Calaveras Big Trees</strong></h3>
             <p class="font-weight-light">
                 To enhance and display newly developed CSS and Javascript styling capabilities, my group and I 
@@ -180,7 +180,7 @@
 
         <!--<div class="col-0 col-md-1"></div>-->
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-            <img src="images/cover_train.png" class="img-fluid mb-5" />
+            <img src="images/cover_train.png" class="img-fluid mb-3" />
             <h3><strong>Purdue Reamer Club</strong></h3>
             <p class="font-weight-light">
                 The Purdue Reamer Club is a student run organization that was in need of a new website that could 
@@ -204,20 +204,39 @@
             <div class="row">
                 <div class="col-1"></div>
                 <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/bigtreessite.JPG" style="height: 50%;">
-                    <h3><strong>Internship - CEM</strong></h3>
-
+                    <img src="images/cover_corec.JPG" class="img-fluid mb-3">
+                    <h3><strong>Purdue University CoRec</strong></h3>
+                    <p class="font-weight-light">
+                        Since Fall of 2019, I have worked on various graphic design projects to be displayed in the 
+                        Purdue University Recreational center. These graphics have been viewed by thousands of students 
+                        on Digital screens and on the rec center’s social media presence.
+                    </p>
+                    <p class="font-italic">
+                        Adobe Spark, Illustrator, Photoshop
+                    </p>
                 </div>
                 <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/bigtreessite.JPG" style="height: 50%;">
-                    <h3><strong>Internship - CEM</strong></h3>
-
+                    <img src="images/cover_logo.png" class="img-fluid mb-3">
+                    <h3><strong>Infographics and Logos</strong></h3>
+                    <p class="font-weight-light">
+                        Through my time at Purdue, I have had the opportunity to create infographics for my classes and Logos for 
+                        my group projects...
+                    </p>
+                    <p class="font-italic">
+                        Adobe Illustrator, Photoshop
+                    </p>
                 </div>
                 <!--<div class="col-md-1"></div>-->
                 <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/bigtreessite.JPG" style="height: 50%; width: auto;" />
-                    <h3><strong>Internship - CEM</strong></h3>
-
+                    <img src="images/cover_digital.JPG" class="img-fluid mb-3" />
+                    <h3><strong>Digital Illustration</strong></h3>
+                    <p class="font-weight-light">
+                        Digital Illustration comes as a small hobby of mine. Feel free to browse some sketches I have done while 
+                        feeling inspired.
+                    </p>
+                    <p class="font-italic">
+                        Adobe Fresco, Illustrator, Photoshop
+                    </p>
                 </div>
             </div>
 
